k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamflix-app
  namespace: streamflix
  labels:
    app: streamflix
spec:
  replicas: 3
  selector:
    matchLabels:
      app: streamflix
  template:
    metadata:
      labels:
        app: streamflix
    spec:
      containers:
      - name: streamflix
        image: riyanshyadav09/streamflix:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
